--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ xarray>=0.20.0
 netcdf4>=1.5.0
 cartopy>=0.20.0
 cmocean>=2.0.0
+requests>=2.25.0
+tqdm>=4.60.0
 pytest>=6.0.0
 nbformat>=5.0.0
 nbconvert>=6.0.0
