--- a/.github/workflows/autograding.yml
+++ b/.github/workflows/autograding.yml
@@ -29,5 +29,4 @@ jobs:
         
     - name: Run Tests
       run: |
-        cd src
-        python -m pytest ../tests/ -v
+        python -m pytest tests/ -v
